--- a/shop/cultivo/index.html
+++ b/shop/cultivo/index.html
@@ -236,7 +236,7 @@
 
                                         <ul id="mega-menu-secondary-menu" class="mega-menu max-mega-menu mega-menu-horizontal mega-no-js" data-event="hover_intent" data-effect="fade_up" data-effect-speed="200" data-effect-mobile="disabled" data-effect-speed-mobile="0" data-mobile-force-width="false" data-second-click="go" data-document-click="collapse" data-vertical-behaviour="standard" data-breakpoint="768" data-unbind="true" data-mobile-state="collapse_all" data-hover-intent-timeout="300" data-hover-intent-interval="100">
                                             <li class='mega-menu-item mega-menu-item-type-post_type mega-menu-item-object-page mega-align-bottom-left mega-menu-flyout mega-menu-item-1858' id='mega-menu-item-1858'>
-                                                <a class="mega-menu-link" target="_blank" href="https://www.smokeshop.ml/shop/Por favor escríba aquí su consulta:)" tabindex="0"> <i class="fab fa-whatsapp sap-icon"></i> </a>
+                                                <a class="mega-menu-link" target="_blank" href="https://wa.me/50671217851/?text=" tabindex="0"> <i class="fab fa-whatsapp sap-icon"></i> </a>
                                             </li>
                                         </ul>
 
@@ -325,7 +325,7 @@
                             </div>
 
                             <div class="et_pb_module et_pb_image et_pb_image_2_tb_header inline-block">
-                                <a href="https://www.smokeshop.ml/shop/" target="_blank" style="color: black !important;">
+                                <a href="https://wa.me/50671217851/?text=" target="_blank" style="color: black !important;">
                                     <i class="fab fa-whatsapp sap-icon"></i>
                                 </a>
                             </div>
@@ -394,7 +394,7 @@
                                                                 <div class="feature-slider " style="background-image: url(https://www.herbalist.ml/img/purple.png)">
                                                                     <div class="slider-content et_pb_row">
                                                                         <h2 class="custom-slider-text herbalist-kit">Sí al autocultivo</h2>
-                                                                        <a class="more btn btn--black" target="" href="https://www.smokeshop.ml/shop/">
+                                                                        <a class="more btn btn--black" target="" href="https://wa.me/50671217851/?text=">
                                                                             <span class="text">Shop</span>
                                                                             <span class="bg"></span>
                                                                         </a>
@@ -461,7 +461,7 @@
                                                             <p class="custom-btn-price">120 x 120 x 200 cm</p>
                                                             <p class="custom-btn-price"><strong>$190.50</strong></p>
                                                             <p class="custom-btn-comprar">
-                                                                <a class="more btn btn--black" target="" href="https://www.smokeshop.ml/shop/">
+                                                                <a class="more btn btn--black" target="" href="https://wa.me/50671217851/?text=">
                                                                     <span class="text">Comprar</span>
                                                                     <span class="bg"></span>
                                                                 </a>
@@ -486,7 +486,7 @@
                                                         <p class="custom-btn-price">60 x 60 x 140 cm</p>
                                                         <p class="custom-btn-price"><strong>$100</strong></p>
                                                         <p class="custom-btn-comprar">
-                                                            <a class="more btn btn--black" target="" href="https://www.smokeshop.ml/shop/">
+                                                            <a class="more btn btn--black" target="" href="https://wa.me/50671217851/?text=">
                                                                 <span class="text">Comprar</span>
                                                                 <span class="bg"></span>
                                                             </a>
@@ -510,7 +510,7 @@
                                                         <p class="custom-btn-price">60 x 60 x 140 cm</p>
                                                         <p class="custom-btn-price"><strong>$150.00</strong></p>
                                                         <p class="custom-btn-comprar">
-                                                            <a class="more btn btn--black" target="" href="https://www.smokeshop.ml/shop/">
+                                                            <a class="more btn btn--black" target="" href="https://wa.me/50671217851/?text=">
                                                                 <span class="text">Comprar</span>
                                                                 <span class="bg"></span>
                                                             </a>
@@ -533,7 +533,7 @@
                                                         <p class="custom-btn-price">60 x 60 x 140 cm</p>
                                                         <p class="custom-btn-price"><strong>$99.99</strong></p>
                                                         <p class="custom-btn-comprar">
-                                                            <a class="more btn btn--black" target="" href="https://www.smokeshop.ml/shop/">
+                                                            <a class="more btn btn--black" target="" href="https://wa.me/50671217851/?text=">
                                                                 <span class="text">Comprar</span>
                                                                 <span class="bg"></span>
                                                             </a>
@@ -565,7 +565,7 @@
                                                             <p class="custom-btn-price">200W</p>
                                                             <p class="custom-btn-price"><strong>$300</strong></p>
                                                             <p class="custom-btn-comprar">
-                                                                <a class="more btn btn--black" target="" href="https://www.smokeshop.ml/shop/">
+                                                                <a class="more btn btn--black" target="" href="https://wa.me/50671217851/?text=">
                                                                     <span class="text">Comprar</span>
                                                                     <span class="bg"></span>
                                                                 </a>
@@ -590,7 +590,7 @@
                                                         <p class="custom-btn-price">120W</p>
                                                         <p class="custom-btn-price"><strong>$190</strong></p>
                                                         <p class="custom-btn-comprar">
-                                                            <a class="more btn btn--black" target="" href="https://www.smokeshop.ml/shop/">
+                                                            <a class="more btn btn--black" target="" href="https://wa.me/50671217851/?text=">
                                                                 <span class="text">Comprar</span>
                                                                 <span class="bg"></span>
                                                             </a>
@@ -614,7 +614,7 @@
                                                         <p class="custom-btn-price">150W</p>
                                                         <p class="custom-btn-price"><strong>$188.99</strong></p>
                                                         <p class="custom-btn-comprar">
-                                                            <a class="more btn btn--black" target="" href="https://www.smokeshop.ml/shop/">
+                                                            <a class="more btn btn--black" target="" href="https://wa.me/50671217851/?text=">
                                                                 <span class="text">Comprar</span>
                                                                 <span class="bg"></span>
                                                             </a>
@@ -636,7 +636,7 @@
                                                         <p class="custom-btn-price">250w</p>
                                                         <p class="custom-btn-price"><strong>$320.50</strong></p>
                                                         <p class="custom-btn-comprar">
-                                                            <a class="more btn btn--black" target="" href="https://www.smokeshop.ml/shop/">
+                                                            <a class="more btn btn--black" target="" href="https://wa.me/50671217851/?text=">
                                                                 <span class="text">Comprar</span>
                                                                 <span class="bg"></span>
                                                             </a>
@@ -736,7 +736,7 @@
 
 
                                 <div class="et_pb_module et_pb_image et_pb_image_1_tb_footer">
-                                    <a href="https://www.smokeshop.ml/shop/Por favor escríba aquí su consulta:)" target="_blank" class="custom-a-social">
+                                    <a href="https://wa.me/50671217851/?text=" target="_blank" class="custom-a-social">
                                         <i class="fab fa-whatsapp sap-icon"></i>
                                     </a>
                                 </div>
