--- a/shop/cbd/index.html
+++ b/shop/cbd/index.html
@@ -574,7 +574,7 @@
                                                             <p class="custom-btn-price">Espectro completo</p>
                                                             <p class="custom-btn-price"><strong>₡39.000</strong></p>
                                                             <p class="custom-btn-comprar">
-                                                                <a class="more btn btn--black" target="" href="https://www.smokeshop.ml/shop/cbd/cbd-aceite-300-mg/">
+                                                                <a class="more btn btn--black" target="" href="https://wa.me/50671217851/?text=">
                                                                     <span class="text">Comprar</span>
                                                                     <span class="bg"></span>
                                                                 </a>
@@ -599,7 +599,7 @@
                                                         <p class="custom-btn-price">Alta potencia sin THC</p>
                                                         <p class="custom-btn-price"><strong>₡39.000</strong></p>
                                                         <p class="custom-btn-comprar">
-                                                            <a class="more btn btn--black" target="" href="https://www.smokeshop.ml/shop/cbd/cbd-aceite-300-mg-bayas/">
+                                                            <a class="more btn btn--black" target="" href="https://wa.me/50671217851/?text=">
                                                                 <span class="text">Comprar</span>
                                                                 <span class="bg"></span>
                                                             </a>
@@ -623,7 +623,7 @@
                                                         <p class="custom-btn-price">Espectro completo</p>
                                                         <p class="custom-btn-price"><strong>₡69.000</strong></p>
                                                         <p class="custom-btn-comprar">
-                                                            <a class="more btn btn--black" target="" href="https://www.smokeshop.ml/shop/cbd/cbd-aceite-750-mg-natural/">
+                                                            <a class="more btn btn--black" target="" href="https://wa.me/50671217851/?text=">
                                                                 <span class="text">Comprar</span>
                                                                 <span class="bg"></span>
                                                             </a>
@@ -646,7 +646,7 @@
                                                         <p class="custom-btn-price">Espectro completo</p>
                                                         <p class="custom-btn-price"><strong>₡69.000</strong></p>
                                                         <p class="custom-btn-comprar">
-                                                            <a class="more btn btn--black" target="" href="https://www.smokeshop.ml/shop/cbd/cbd-aceite-750-mg-natural/">
+                                                            <a class="more btn btn--black" target="" href="https://wa.me/50671217851/?text=">
                                                                 <span class="text">Comprar</span>
                                                                 <span class="bg"></span>
                                                             </a>
