--- a/shop/picadoras/index.html
+++ b/shop/picadoras/index.html
@@ -53,12 +53,12 @@
     </script>
 
     <!-- This site is optimized with the Yoast SEO Premium plugin v17.7 (Yoast SEO v17.7.1) - https://yoast.com/wordpress/plugins/seo/ -->
-    <title>Picadoras | Herbalist Costa Rica</title>
+    <title>Grinders | Herbalist Costa Rica</title>
     <meta name="description" content="Tienda #1 en accesorios 420 para fumar con bongs, pipas de vidrio, vaporizadores, boletas y picadoras. Envío gratis y discreto a su puerta." />
     <link rel="canonical" href="https://www.herbalist.ml/shop/picadoras/" />
     <meta property="og:locale" content="es_CR" />
     <meta property="og:type" content="website" />
-    <meta property="og:title" content="Picadoras | Herbalist Costa Rica" />
+    <meta property="og:title" content="Grinders | Herbalist Costa Rica" />
     <meta property="og:description" content="Tienda #1 en accesorios 420 para fumar con bongs, pipas de vidrio, vaporizadores, boletas y picadoras. Envío gratis y discreto a su puerta." />
     <meta property="og:url" content="https://www.herbalist.ml/shop/picadoras/" />
     <meta property="og:site_name" content="Herbalist Smoke Shop" />
@@ -235,7 +235,7 @@
 
                                         <ul id="mega-menu-secondary-menu" class="mega-menu max-mega-menu mega-menu-horizontal mega-no-js" data-event="hover_intent" data-effect="fade_up" data-effect-speed="200" data-effect-mobile="disabled" data-effect-speed-mobile="0" data-mobile-force-width="false" data-second-click="go" data-document-click="collapse" data-vertical-behaviour="standard" data-breakpoint="768" data-unbind="true" data-mobile-state="collapse_all" data-hover-intent-timeout="300" data-hover-intent-interval="100">
                                             <li class='mega-menu-item mega-menu-item-type-post_type mega-menu-item-object-page mega-align-bottom-left mega-menu-flyout mega-menu-item-1858' id='mega-menu-item-1858'>
-                                                <a class="mega-menu-link" target="_blank" href="https://wa.me/50671217851/?text=Por favor escríba aquí su consulta:)" tabindex="0"> <i class="fab fa-whatsapp sap-icon"></i> </a>
+                                                <a class="mega-menu-link" target="_blank" href="https://wa.me/50671217851/?text=" tabindex="0"> <i class="fab fa-whatsapp sap-icon"></i> </a>
                                             </li>
                                         </ul>
 
