--- a/shop/index.html
+++ b/shop/index.html
@@ -452,7 +452,7 @@ heateor_sss_vertical_sharing{
                                                             <div class="feature-slider " style="background-image: url(https://www.herbalist.ml/img/the-herbalist-stoner-box.jpg);">
                                                                 <div class="slider-content et_pb_row">
                                                                     <h2>Herbalist Kit por solo $49.99</h2>
-                                                                    <a class="more btn btn--black" target="" href="https://www.smokeshop.ml/shop/accesorios/herbalist-kit-420/">
+                                                                    <a class="more btn btn--black" target="" href="https://wa.me/50671217851/?text=">
                                                                         <span class="text">Shop</span>
                                                                         <span class="bg"></span>
                                                                     </a>
