--- a/index.html
+++ b/index.html
@@ -348,11 +348,11 @@
                             </div> -->
 
                             <div class="et_pb_module et_pb_image et_pb_image_3_tb_header inline-block">
-                                <a href="https://www.instagram.com/415herbalist/" target="_blank"><span class="et_pb_image_wrap "><img src="https://www.herbalist.ml/img/insta.svg" alt="herbalist instagram" title="insta" class="wp-image-28 lazyloaded" data-src="https://www.herbalist.ml/img/insta.svg"><noscript><img src="https://www.herbalist.ml/img/insta.svg" alt="insta" title="insta" class="wp-image-28" data-eio="l" /></noscript></span></a>
+                                <a href="https://www.instagram.com/herbalist.ml/" target="_blank"><span class="et_pb_image_wrap "><img src="https://www.herbalist.ml/img/insta.svg" alt="herbalist instagram" title="insta" class="wp-image-28 lazyloaded" data-src="https://www.herbalist.ml/img/insta.svg"><noscript><img src="https://www.herbalist.ml/img/insta.svg" alt="insta" title="insta" class="wp-image-28" data-eio="l" /></noscript></span></a>
                             </div>
 
                             <div class="et_pb_module et_pb_image et_pb_image_3_tb_header inline-block">
-                                <a href="https://www.facebook.com/415herbalist/" target="_blank">
+                                <a href="https://www.facebook.com/herbalist.ml/" target="_blank">
                                     <span class="et_pb_image_wrap ">
                                  <i class="fab fa-facebook sap-icon" style="color: black;"></i>
                                 </span>
@@ -833,7 +833,7 @@ Cuando se trata de intentar animar una fiesta o socializar con tus amigos, no ha
                             </div>
 
                             <div class="et_pb_module et_pb_image et_pb_image_3_tb_footer">
-                                <a href="https://www.facebook.com/415herbalist/" target="_blank"><span class="et_pb_image_wrap "><i class="fab fa-facebook sap-icon" style="color: black;"></i></span>
+                                <a href="https://www.facebook.com/herbalist.ml/" target="_blank"><span class="et_pb_image_wrap "><i class="fab fa-facebook sap-icon" style="color: black;"></i></span>
                                 </a>
                             </div>
 
