--- a/shop/cultivo/index.html
+++ b/shop/cultivo/index.html
@@ -378,7 +378,7 @@
                             <div class="et_builder_inner_content et_pb_gutters3">
 
 
-                                <div class="et_pb_section et_pb_section_0 et_section_regular" >
+                                <!--<div class="et_pb_section et_pb_section_0 et_section_regular" >
 
                                     <div class="et_pb_row et_pb_row_0 et_pb_row_fullwidth">
                                         <div class="et_pb_column et_pb_column_4_4 et_pb_column_0  et_pb_css_mix_blend_mode_passthrough et-last-child">
@@ -430,7 +430,7 @@
                                     </div>
 
 
-                                </div>
+                                </div>-->
 
 
                                 <div class="et_pb_section et_pb_section_1 et_section_regular" >
