--- a/shop/index.html
+++ b/shop/index.html
@@ -501,7 +501,7 @@ heateor_sss_vertical_sharing{
                                     <div class="et_pb_row et_pb_row_1">
                                         <div class="et_pb_column et_pb_column_4_4 et_pb_column_1  et_pb_css_mix_blend_mode_passthrough et-last-child">
                                             <div class="et_pb_module et_pb_text et_pb_text_1  et_pb_text_align_center et_pb_bg_layout_light">
-                                                <div class="et_pb_text_inner"><h1>Accesorios Premium de la más alta calidad</h1></div>
+                                                <div class="et_pb_text_inner"><h1>Smoke Shop #1 en Costa Rica</h1></div>
                                             </div>
                                         </div>
                                     </div>
@@ -1419,7 +1419,7 @@ heateor_sss_vertical_sharing{
 
                                 <div class="et_pb_module et_pb_text et_pb_text_1_tb_footer  et_pb_text_align_left et_pb_bg_layout_light">
 
-                                    <div class="et_pb_text_inner"><h3>Herbalist Smoke Shop</h3>
+                                    <div class="et_pb_text_inner"><h3>Herbalist es aquel que utiliza las plantas para el bienestar</h3>
 
                                         <p>
                                             <span>
