--- a/shop/index.html
+++ b/shop/index.html
@@ -1419,7 +1419,7 @@ heateor_sss_vertical_sharing{
 
                                 <div class="et_pb_module et_pb_text et_pb_text_1_tb_footer  et_pb_text_align_left et_pb_bg_layout_light">
 
-                                    <div class="et_pb_text_inner"><h3>Herbalist es aquel que utiliza las plantas para el bienestar</h3>
+                                    <div class="et_pb_text_inner"><h3>Herbalist es aquel que utiliza las plantas para el bienestar 🍃</h3>
 
                                         <p>
                                             <span>
