--- a/index.html
+++ b/index.html
@@ -416,7 +416,7 @@
                                                            </div>-->
 
                                                         <div class="owl-slider item">
-                                                            <div class="feature-slider " style="background-image: url('https://www.herbalist.ml/img/herbalist_vape_banner.jpg');">
+                                                            <div class="feature-slider" style="background-image: url('https://www.herbalist.ml/img/herbalist_vape_banner.jpg');">
                                                                 <div class="slider-content et_pb_row">
                                                                     <h2 class="custom-slider-text herbalist-kit">Smoke Shop #1 en Costa Rica</h2>
                                                                     <a class="more btn btn--black" target="" href="https://www.herbalist.ml/shop/">
@@ -504,7 +504,7 @@
                                                         <div class="shop-content">
                                                             <h2>Vapes</h2>
                                                             <div class="shop-image">
-                                                                <a href="https://www.herbalist.ml/shop/vapes/"><img src="https://www.herbalist.ml/img/icons/vape-icon.jpg" alt="vaporizadores" /></a>
+                                                                <a href="https://www.herbalist.ml/shop/vapes/"><img src="https://www.herbalist.ml/img/icons/vape-icon.jpg" alt="vaporizadores costa rica" /></a>
                                                             </div>
                                                             <p>
                                                                 Si bien el vapeo ha existido durante años, recientemente se ha disparado en popularidad como una forma más pura y saludable de disfrutar el fumado sin la necesidad de fumar a combustión.
@@ -515,7 +515,7 @@
                                                         <div class="shop-content">
                                                             <h2>Grinders</h2>
                                                             <div class="shop-image">
-                                                                <a href="https://www.herbalist.ml/shop/picadoras/"><img src="https://www.herbalist.ml/img/icons/grinder-icon.jpg" alt="picadoras de weed" /></a>
+                                                                <a href="https://www.herbalist.ml/shop/picadoras/"><img src="https://www.herbalist.ml/img/icons/grinder-icon.jpg" alt="picadoras o grinders costa rica" /></a>
                                                             </div>
                                                             <p>
                                                                 El grinder es una de las herramientas más importantes que puede tener cualquier stoner. Para moler esas hierbas secas y hacerlas perfectas para un humo suave, se necesita un grinder fuerte.
@@ -569,7 +569,7 @@
 
                                     <div class="et_pb_text_inner"><div class="client-reviews embarc_deals_info"><div class="deals-info row">
                                         <div class="deals-image">
-                                            <img src="https://www.herbalist.ml/img/products/pipas/herbalist-mini-pipe.jpg" alt="mini pipa de vidrio" class="img-responsive"/>
+                                            <img src="https://www.herbalist.ml/img/products/pipas/herbalist-mini-pipe.jpg" alt="pipas de vidrio" class="img-responsive"/>
                                         </div>
                                         <div class="deals-details">
                                             <div class="deal-category-sec">
@@ -595,7 +595,7 @@
                                         </div>
                                     </div><div class="deals-info row">
                                         <div class="deals-image">
-                                            <img src="https://www.herbalist.ml/img/products/accesorios/mini-roller-ocb.jpg?v2" alt="Enroladora" class="img-responsive"/>
+                                            <img src="https://www.herbalist.ml/img/products/accesorios/mini-roller-ocb.jpg?v2" alt="Enroladora costa rica" class="img-responsive"/>
                                         </div>
                                         <div class="deals-details">
                                             <div class="deal-category-sec">
@@ -754,7 +754,7 @@ Cuando se trata de intentar animar una fiesta o socializar con tus amigos, no ha
 
                             <a href="https://www.herbalist.ml/">
                             <span class="et_pb_image_wrap ">
-                            <img src="https://www.herbalist.ml/img/full-herbalist-logo-png.png" alt="smoke shop costa rica" title="logo" class="wp-image-16" />
+                            <img src="https://www.herbalist.ml/img/full-herbalist-logo-png.png" alt="herbalist smoke shop costa rica" title="logo" class="wp-image-16" />
                             </span>
                             </a>
 
