--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="es-CR">
+<html lang="es">
 <head>
 
     <meta charset="UTF-8" />
@@ -20,6 +20,8 @@
     <!-- This site is optimized with the Yoast SEO Premium plugin v16.2 (Yoast SEO v17.3) - https://yoast.com/wordpress/plugins/seo/ -->
     <title>Herbalist Smoke Shop: Los mejores bongs, pipas y accesorios para fumar</title>
     <meta name="description" content="Herbalist es la mejor smoke shop online con la mejor colección de bongs, pipas, vaporizadores, CBD y accesorios para fumar a la venta." />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0" />
+    
     <link rel="canonical" href="https://www.herbalist.ml/" />
 
     <link rel="icon" type="image/png" href="https://www.herbalist.ml/img/leaf.png" />
@@ -61,7 +63,7 @@
 
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
 
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0" />
+    
 
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-EBN618D1GP"></script>
