--- a/index.html
+++ b/index.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
-<html lang="es">
+<html lang="es-CR">
 <head>
 
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-
+    <meta name="robots" content="index, follow">
+    
     <script type="text/javascript">
         document.documentElement.className = 'js';
     </script>
