--- a/shop/cbd/index.html
+++ b/shop/cbd/index.html
@@ -289,7 +289,7 @@
                     <div class="et_pb_row et_pb_row_0_tb_header">
                         <div class="et_pb_column et_pb_column_4_4 et_pb_column_0_tb_header  et_pb_css_mix_blend_mode_passthrough et-last-child">
                             <div class="et_pb_module et_pb_text et_pb_text_0_tb_header et_clickable  et_pb_text_align_center et_pb_bg_layout_light">
-                                <div class="et_pb_text_inner"><p>SERVICIO EXPRESS 🛵💨</p></div>
+                                <div class="et_pb_text_inner"><p>10% de descuento en todas las compras online</p></div>
                             </div>
                         </div>
                     </div>
