--- a/index.html
+++ b/index.html
@@ -419,11 +419,11 @@
                                                            </div>-->
 
                                                         <div class="owl-slider item">
-                                                            <div class="feature-slider" style="background-image: url('https://www.herbalist.ml/img/smoking.jpg');">
+                                                            <div class="feature-slider" style="background-image: url('https://www.herbalist.ml/img/volcan.jpg');">
                                                                 <div class="slider-content et_pb_row">
                                                                     <h2 class="custom-slider-text herbalist-kit">Smoke Shop #1 en Costa Rica</h2>
                                                                     <a class="more btn btn--black" target="" href="https://www.herbalist.ml/shop/">
-                                                                        <span class="text">Shop</span>
+                                                                        <span class="text">Order Now</span>
                                                                         <span class="bg"> </span>
                                                                     </a>
 
@@ -442,7 +442,7 @@
                                                                 nav: true,
                                                                 dots: true,
                                                                 dotsEach: true,
-                                                                autoplay: true,
+                                                                autoplay: false,
                                                                 // autoplayTimeout: varAutoTime,
                                                                 // autoplay:false,
                                                                 // autoplayTimeout:3000,
