--- a/index.html
+++ b/index.html
@@ -757,7 +757,7 @@ Cuando se trata de intentar animar una fiesta o socializar con tus amigos, no ha
 
                             <a href="https://www.herbalist.ml/">
                             <span class="et_pb_image_wrap ">
-                            <img src="https://www.herbalist.ml/img/full-herbalist-logo-png.png" alt="herbalist smoke shop costa rica" title="logo" class="wp-image-16" />
+                            <img src="https://www.herbalist.ml/img/ig-logo.jpg" alt="herbalist smoke shop costa rica" title="logo" class="wp-image-16" />
                             </span>
                             </a>
 
