--- a/shop/index.html
+++ b/shop/index.html
@@ -195,7 +195,7 @@ heateor_sss_vertical_sharing{
 
 
                             <div class="et_pb_module et_pb_image et_pb_image_0_tb_header">
-                                <a href="https://www.herbalist.ml/"><span class="et_pb_image_wrap "><img src="https://www.herbalist.ml/img/full-herbalist-logo-png.png" alt="herbalist smoke shop" title="logo" class="wp-image-16" /></span></a>
+                                <a href="https://www.herbalist.ml/"><span class="et_pb_image_wrap "><img src="https://www.herbalist.ml/img/ig-logo.jpg" alt="herbalist smoke shop" title="logo" class="wp-image-16" /></span></a>
                             </div>
 
                         </div>
@@ -281,7 +281,7 @@ heateor_sss_vertical_sharing{
 
                         <div class="et_pb_column et_pb_column_1_3 et_pb_column_5_tb_header  et_pb_css_mix_blend_mode_passthrough">
                             <div class="et_pb_module et_pb_image et_pb_image_1_tb_header">
-                                <a href="https://www.herbalist.ml/"><span class="et_pb_image_wrap "><img src="https://www.herbalist.ml/img/full-herbalist-logo-png.png" alt="herbalist smoke shop logo" title="logo" class="wp-image-16" /></span></a>
+                                <a href="https://www.herbalist.ml/"><span class="et_pb_image_wrap "><img src="https://www.herbalist.ml/img/ig-logo.jpg" alt="herbalist smoke shop logo" title="logo" class="wp-image-16" /></span></a>
                             </div>
                         </div>
 
@@ -1417,7 +1417,7 @@ heateor_sss_vertical_sharing{
 
                                 <div class="et_pb_module et_pb_text et_pb_text_1_tb_footer  et_pb_text_align_left et_pb_bg_layout_light">
 
-                                    <div class="et_pb_text_inner"><h3>Herbalist es aquel que utiliza las plantas para el bienestar 🍃</h3>
+                                    <div class="et_pb_text_inner"><h3>Herbalist Smoke Shop</h3>
 
                                         <p>
                                             <span>
@@ -1481,7 +1481,7 @@ heateor_sss_vertical_sharing{
 
                                 <a href="https://www.herbalist.ml/">
                             <span class="et_pb_image_wrap ">
-                            <img src="https://www.herbalist.ml/img/full-herbalist-logo-png.png" alt="smoke shop costa rica" title="logo" class="wp-image-16" />
+                            <img src="https://www.herbalist.ml/img/ig-logo.jpg" alt="smoke shop costa rica" title="logo" class="wp-image-16" />
                             </span>
                                 </a>
 
