--- a/index.html
+++ b/index.html
@@ -715,10 +715,7 @@ Cuando se trata de intentar animar una fiesta o socializar con tus amigos, no ha
                                     <div>
 
                                     </div>
-                                    <!-- <div>
-                                         Our boxes are packed with hand-selected products to ensure you are getting the highest quality materials for your smoking experience. You can opt for the Herbalist Pack, filled with 7+ essential products for your smoking needs, or you can choose to go for the Onfroze Box, which contains a mixture of both glass and paper products—and even one of our unique, handpicked glass pieces we offer here at Herbalist. At only a small price increase from the Onfroze Pack, this is quite a value that is fit for any true smoker and one that you surely won’t want to pass up.
-                                     </div>-->
-
+                                 
                                     <p><span></span></p>
                                     <p><span></span></p>
 
@@ -726,7 +723,7 @@ Cuando se trata de intentar animar una fiesta o socializar con tus amigos, no ha
                             </div>
                         </div>
 
-                        <!--<div class="et_pb_with_border et_pb_column_1_2 et_pb_column et_pb_column_2_tb_footer  et_pb_css_mix_blend_mode_passthrough et-last-child">
+                        <div class="et_pb_with_border et_pb_column_1_2 et_pb_column et_pb_column_2_tb_footer  et_pb_css_mix_blend_mode_passthrough et-last-child">
 
 
                         <div class="et_pb_with_border et_pb_module et_pb_text et_pb_text_2_tb_footer et_clickable  et_pb_text_align_left et_pb_bg_layout_light">
@@ -745,7 +742,7 @@ Cuando se trata de intentar animar una fiesta o socializar con tus amigos, no ha
 
                         </div>
                     </div>
-                    </div>-->
+                    </div>
 
 
                     </div><div class="et_pb_row et_pb_row_2_tb_footer foot-menus et_pb_gutters1 et_pb_row--with-menu">
