--- a/shop/cbd/index.html
+++ b/shop/cbd/index.html
@@ -53,12 +53,12 @@
     </script>
 
     <!-- This site is optimized with the Yoast SEO Premium plugin v17.7 (Yoast SEO v17.7.1) - https://yoast.com/wordpress/plugins/seo/ -->
-    <title>CBD | Herbalist Costa Rica</title>
+    <title>CBD Costa Rica - Herbalist</title>
     <meta name="description" content="Descubra nuestros productos de CBD Premium sin THC. Con aceite de cáñamo galardonado y de alta calidad. Siente y prueba la diferencia. Visítenos para más información." />
     <link rel="canonical" href="https://www.herbalist.ml/shop/cbd/" />
     <meta property="og:locale" content="es_CR" />
     <meta property="og:type" content="website" />
-    <meta property="og:title" content="CBD | Herbalist Costa Rica" />
+    <meta property="og:title" content="CBD Costa Rica - Herbalist" />
     <meta property="og:description" content="Descubra nuestros productos de CBD Premium sin THC. Con aceite de cáñamo galardonado y de alta calidad. Siente y prueba la diferencia. Visítenos para más información." />
     <meta property="og:url" content="https://www.herbalist.ml/shop/cbd/" />
     <meta property="og:site_name" content="Herbalist Smoke Shop" />
@@ -850,7 +850,7 @@
                                 <div class="et_pb_module et_pb_text et_pb_text_6_tb_footer inline-block  et_pb_text_align_left et_pb_bg_layout_light">
                                     <div class="et_pb_text_inner">
                                         <p>© Herbalist Smoke Shop 2022 | ® Todos los Derechos Reservados.<hr></p>
-                                        <p>🇨🇷 Tranquilino Sáenz Flores, Heredia, Costa Rica.</p>
+                                        <p>📍 Barrio Escalante, San José, Costa Rica.</p>
                                     </div>
                                 </div>
 
