--- a/shop/cbd/index.html
+++ b/shop/cbd/index.html
@@ -53,12 +53,12 @@
     </script>
 
     <!-- This site is optimized with the Yoast SEO Premium plugin v17.7 (Yoast SEO v17.7.1) - https://yoast.com/wordpress/plugins/seo/ -->
-    <title>CBD Costa Rica - Herbalist</title>
+    <title>El mejor aceite de CBD en Costa Rica - Herbalist</title>
     <meta name="description" content="Descubra nuestros productos de CBD Premium sin THC. Con aceite de cáñamo galardonado y de alta calidad. Siente y prueba la diferencia. Visítenos para más información." />
     <link rel="canonical" href="https://www.herbalist.ml/shop/cbd/" />
     <meta property="og:locale" content="es_CR" />
     <meta property="og:type" content="website" />
-    <meta property="og:title" content="CBD Costa Rica - Herbalist" />
+    <meta property="og:title" content="El mejor aceite de CBD en Costa Rica - Herbalist" />
     <meta property="og:description" content="Descubra nuestros productos de CBD Premium sin THC. Con aceite de cáñamo galardonado y de alta calidad. Siente y prueba la diferencia. Visítenos para más información." />
     <meta property="og:url" content="https://www.herbalist.ml/shop/cbd/" />
     <meta property="og:site_name" content="Herbalist Smoke Shop" />
@@ -543,7 +543,7 @@
                                     <div class="et_pb_with_border et_pb_row et_pb_row_1">
                                         <div class="et_pb_column et_pb_column_1_2 et_pb_column_1  et_pb_css_mix_blend_mode_passthrough">
                                             <div class="et_pb_module et_pb_text et_pb_text_1  et_pb_text_align_left et_pb_bg_layout_light">
-                                                <div class="et_pb_text_inner"><h1>CBD</h1></div>
+                                                <div class="et_pb_text_inner"><h1>El mejor aceite de CBD en Costa Rica</h1></div>
                                             </div>
 
                                             <div class="et_pb_module et_pb_text et_pb_text_1  et_pb_text_align_left et_pb_bg_layout_light">
