--- a/index.html
+++ b/index.html
@@ -1,5 +1,7 @@
 <!DOCTYPE html>
 <html lang="es-CR">
+
+
 <head>
 
     <meta charset="UTF-8" />
@@ -83,6 +85,12 @@
     <style type="text/css">/** Mega Menu CSS: fs **/</style>
 
 </head>
+
+
+
+
+
+
 
 <body class="home page-template-default page page-id-2 et-tb-has-template et-tb-has-header et-tb-has-footer mega-menu-secondary-menu mega-menu-primary-menu et_pb_button_helper_class et_cover_background et_pb_gutter osx et_pb_gutters3 et_pb_pagebuilder_layout et_no_sidebar et_divi_theme et-db">
 
@@ -736,10 +744,7 @@ Cuando se trata de intentar animar una fiesta o socializar con tus amigos, no ha
 
                         <div class="et_pb_module et_pb_text et_pb_text_3_tb_footer  et_pb_text_align_left et_pb_bg_layout_light">
                         <div class="et_pb_text_inner">
-                            <p>Get cash back on each purchase and access to exclusive deals, new arrivals and more.</p>
-
-
-
+                            <p>Obtenga reembolsos en efectivo por cada compra y acceda a ofertas exclusivas, novedades y mucho más.</p>
                         </div>
                     </div>
                     </div>
