--- a/shop/index.html
+++ b/shop/index.html
@@ -195,7 +195,7 @@ heateor_sss_vertical_sharing{
 
 
                             <div class="et_pb_module et_pb_image et_pb_image_0_tb_header">
-                                <a href="https://www.herbalist.ml/"><span class="et_pb_image_wrap "><img src="https://www.herbalist.ml/img/ig-logo.jpg" alt="herbalist smoke shop" title="logo" class="wp-image-16" /></span></a>
+                                <a href="https://www.herbalist.ml/"><span class="et_pb_image_wrap "><img src="https://www.herbalist.ml/img/full-herbalist-logo-png.png" alt="herbalist smoke shop" title="logo" class="wp-image-16" /></span></a>
                             </div>
 
                         </div>
